--- a/web/app/languages/themes/twentyfifteen-bg_BG.po
+++ b/web/app/languages/themes/twentyfifteen-bg_BG.po
@@ -1,83 +1,48 @@
-# Translation of Twenty Fifteen in Bulgarian
-# This file is distributed under the same license as the Twenty Fifteen package.
+# Translation of Themes - Twenty Fifteen in Bulgarian
+# This file is distributed under the same license as the Themes - Twenty Fifteen package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2014-12-24 11:06:22+0000\n"
+"PO-Revision-Date: 2015-08-18 16:52:11+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: GlotPress/1.0-alpha-1000\n"
-"Project-Id-Version: Twenty Fifteen\n"
-
-#: single.php:37
-msgid "Previous post:"
-msgstr "Предишна публикация:"
-
-#: single.php:34
-msgid "Next post:"
-msgstr "Следваща публикация:"
-
-#: inc/customizer.php:52 inc/customizer.php:68 inc/customizer.php:73
-msgid "Applied to the header on small screens and the sidebar on wide screens."
-msgstr "Приложено към заглавката на малки екрани и страничната колона на големи."
-
-#: single.php:36
-msgid "Previous"
-msgstr "Предишна"
-
-#: single.php:33
-msgid "Next"
-msgstr "Следваща"
-
-#: inc/template-tags.php:91 inc/template-tags.php:99
-msgctxt "Used between list items, there is a space after the comma."
-msgid ", "
-msgstr ", "
-
-#: image.php:24
-msgid "Previous Image"
-msgstr "Предишно изображение"
-
-#: image.php:24
-msgid "Next Image"
-msgstr "Следващо изображение"
-
-#: inc/template-tags.php:23
-msgid "Comment navigation"
-msgstr "Навигация в коментарите"
-
-#: inc/template-tags.php:122
-msgid "Leave a comment"
-msgstr "Публикуване на коментар"
-
-#: inc/template-tags.php:122
-msgid "1 Comment"
-msgstr "1 Коментар"
-
-#: inc/template-tags.php:122
-msgid "% Comments"
-msgstr "% Коментари"
-
-#: search.php:18
-msgid "Search Results for: %s"
-msgstr "Резултати от търсене за: %s"
-
-#. Author of the plugin/theme
-msgid "the WordPress team"
-msgstr "Екипът на WordPress "
+"X-Generator: GlotPress/2.3.0-alpha\n"
+"Language: bg\n"
+"Project-Id-Version: Themes - Twenty Fifteen\n"
 
 #. Description of the plugin/theme
 msgid "Our 2015 default theme is clean, blog-focused, and designed for clarity. Twenty Fifteen's simple, straightforward typography is readable on a wide variety of screen sizes, and suitable for multiple languages. We designed it using a mobile-first approach, meaning your content takes center-stage, regardless of whether your visitors arrive by smartphone, tablet, laptop, or desktop computer."
 msgstr "Темата по подразбиране за 2015-та е изчистена, блог-фокусирана и създадена с идеята за яснота. Типографията на Twenty Fifteen е проста, функционална и надеждна за всички размери екрани, както и подходяща за много езици. Темата е създадена с мисъл първо за мобилното потребление, което значи, че съдържанието ви винаги е представено добре, независимо дали се чете през телефон, таблет, лаптоп или настолен компютър."
 
-#. Theme URI of the plugin/theme
-msgid "https://wordpress.org/themes/twentyfifteen"
-msgstr "https://wordpress.org/themes/twentyfifteen"
-
 #. Theme Name of the plugin/theme
 msgid "Twenty Fifteen"
 msgstr "Twenty Fifteen"
+
+#. translators: %s: post title
+#: inc/template-tags.php:123
+msgid "Leave a comment<span class=\"screen-reader-text\"> on %s</span>"
+msgstr "Оставете коментар <span class=\"screen-reader-text\"> за %s</span>"
+
+#: single.php:37
+msgid "Previous post:"
+msgstr "Предишна публикация:"
+
+#: single.php:36
+msgid "Previous"
+msgstr "Предишна"
+
+#: single.php:34
+msgid "Next post:"
+msgstr "Следваща публикация:"
+
+#: single.php:33
+msgid "Next"
+msgstr "Следваща"
+
+#: search.php:18
+msgid "Search Results for: %s"
+msgstr "Резултати от търсене на: %s"
 
 #: inc/template-tags.php:113
 msgctxt "Used before full size attachment link."
@@ -94,6 +59,11 @@ msgctxt "Used before category names."
 msgid "Categories"
 msgstr "Категории"
 
+#: inc/template-tags.php:91 inc/template-tags.php:99
+msgctxt "Used between list items, there is a space after the comma."
+msgid ", "
+msgstr ", "
+
 #: inc/template-tags.php:85
 msgctxt "Used before post author name."
 msgid "Author"
@@ -109,53 +79,61 @@ msgctxt "Used before post format."
 msgid "Format"
 msgstr "Формат"
 
-#: inc/template-tags.php:26
-msgid "Older Comments"
-msgstr "По-стари коментари"
+#: inc/template-tags.php:49
+msgid "Featured"
+msgstr "На фокус"
 
 #: inc/template-tags.php:30
 msgid "Newer Comments"
 msgstr "По-нови коментари"
 
-#: inc/template-tags.php:49
-msgid "Featured"
-msgstr "Избрано"
+#: inc/template-tags.php:26
+msgid "Older Comments"
+msgstr "По-стари коментари"
 
-#: inc/customizer.php:152
+#: inc/template-tags.php:23
+msgid "Comment navigation"
+msgstr "Навигация в коментарите"
+
+#: inc/customizer.php:205
 msgid "Blue"
-msgstr "Синьо"
+msgstr "Сини"
 
-#: inc/customizer.php:141
+#: inc/customizer.php:194
 msgid "Purple"
-msgstr "Лилаво"
+msgstr "Лилава"
 
-#: inc/customizer.php:130
+#: inc/customizer.php:183
 msgid "Pink"
-msgstr "Розово"
+msgstr "Розова"
 
-#: inc/customizer.php:108
-msgid "Dark"
-msgstr "Тъмно"
-
-#: inc/customizer.php:119
+#: inc/customizer.php:172
 msgid "Yellow"
-msgstr "Жълто"
+msgstr "Жълта"
 
-#: inc/customizer.php:97
+#: inc/customizer.php:161
+msgid "Dark"
+msgstr "Тъмна"
+
+#: inc/customizer.php:150
 msgid "Default"
 msgstr "По подразбиране"
 
-#: inc/customizer.php:67
+#: inc/customizer.php:75
 msgid "Header and Sidebar Background Color"
 msgstr "Цвят на заглавката и фона на страничната колона"
 
-#: inc/customizer.php:36
-msgid "Base Color Scheme"
-msgstr "Основна цветова схема"
+#: inc/customizer.php:60 inc/customizer.php:76 inc/customizer.php:81
+msgid "Applied to the header on small screens and the sidebar on wide screens."
+msgstr "Приложено към заглавката на малки екрани и страничната колона на големи."
 
-#: inc/customizer.php:51
+#: inc/customizer.php:59
 msgid "Header and Sidebar Text Color"
 msgstr "Цвят на текста в заглавката и страничната колона"
+
+#: inc/customizer.php:44
+msgid "Base Color Scheme"
+msgstr "Основна цветова схема"
 
 #: inc/back-compat.php:37 inc/back-compat.php:47 inc/back-compat.php:60
 msgid "Twenty Fifteen requires at least WordPress version 4.1. You are running version %s. Please upgrade and try again."
@@ -166,85 +144,67 @@ msgctxt "Parent post link"
 msgid "<span class=\"meta-nav\">Published in</span><span class=\"post-title\">%title</span>"
 msgstr "<span class=\"meta-nav\">Публикувано в</span><span class=\"post-title\">%title</span>"
 
-#: header.php:44
+#: image.php:24
+msgid "Next Image"
+msgstr "Следващо изображение"
+
+#: image.php:24
+msgid "Previous Image"
+msgstr "Предишно изображение"
+
+#: header.php:45
 msgid "Menu and widgets"
 msgstr "Меню и джаджи"
 
-#: comments.php:53
-msgid "Comments are closed."
-msgstr "Коментарите са затворени."
-
-#: content-link.php:36 content-page.php:25 content.php:38 image.php:59
-msgid "Pages:"
-msgstr "Страници:"
-
-#: content-link.php:56 content-page.php:35 content-search.php:28
-#: content-search.php:33 content.php:57 image.php:71
-msgid "Edit"
-msgstr "Редактиране"
-
-#: footer.php:25
-msgid "Proudly powered by %s"
-msgstr "Създаден с %s"
-
-#: functions.php:85
-msgid "Primary Menu"
-msgstr "Главно меню"
-
-#: header.php:27
+#: header.php:26
 msgid "Skip to content"
 msgstr "Към съдържанието"
 
-#: content-none.php:15
-msgid "Nothing Found"
-msgstr "Нищо не е открито"
+#: functions.php:283
+msgid "collapse child menu"
+msgstr "свиване на дъщерното меню"
 
-#: content-none.php:22
-msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
-msgstr "Време е за първата ви публикация. <a href=\"%1$s\">Започнете от тук</a>."
+#: functions.php:282
+msgid "expand child menu"
+msgstr "разширяване на дъщерното меню"
 
-#: content-none.php:26
-msgid "Sorry, but nothing matched your search terms. Please try again with some different keywords."
-msgstr "Няма резултати, отговарящи на вашето търсене. Опитайте отново с други ключови думи. "
+#. Translators: To add an additional character subset specific to your
+#. language, translate this to 'greek', 'cyrillic', 'devanagari' or
+#. 'vietnamese'. Do not translate into your own language.
+#: functions.php:212
+msgctxt "Add new subset (greek, cyrillic, devanagari, vietnamese)"
+msgid "no-subset"
+msgstr "cyrillic"
 
-#: content-none.php:31
-msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
-msgstr "Страницата не съществува. Пробвайте да потърсите каквото ви трябва."
-
-#. translators: %s: Name of current post
-#: content-link.php:31 content.php:33 inc/template-tags.php:237
-msgid "Continue reading %s"
-msgstr "Нататък %s"
-
-#. translators: If there are characters in your language that are not supported
+#. Translators: If there are characters in your language that are not supported
 #. by Inconsolata, translate this to 'off'. Do not translate into your own
 #. language.
-#: functions.php:168
+#: functions.php:204
 msgctxt "Inconsolata font: on or off"
 msgid "on"
 msgstr "включен"
 
-#. translators: If there are characters in your language that are not supported
-#. by Noto Sans, translate this to 'off'. Do not translate into your own
-#. language.
-#: functions.php:158
-msgctxt "Noto Sans font: on or off"
-msgid "on"
-msgstr "включен"
-
-#. translators: If there are characters in your language that are not supported
+#. Translators: If there are characters in your language that are not supported
 #. by Noto Serif, translate this to 'off'. Do not translate into your own
 #. language.
-#: functions.php:163
+#: functions.php:196
 msgctxt "Noto Serif font: on or off"
 msgid "on"
 msgstr "включен"
 
-#: functions.php:135
-msgid "Add widgets here to appear in your sidebar."
-msgstr "Джаджите, добавени тук, ще се появят в страничната ви колона."
+#. Translators: If there are characters in your language that are not supported
+#. by Noto Sans, translate this to 'off'. Do not translate into your own
+#. language.
+#: functions.php:188
+msgctxt "Noto Sans font: on or off"
+msgid "on"
+msgstr "включен"
 
-#: functions.php:133
+#: functions.php:162
+msgid "Add widgets here to appear in your sidebar."
+msgstr "Добавете тук джаджи, които да се показват в страничната ви лента."
+
+#: functions.php:160
 msgid "Widget Area"
 msgstr "Зона за джаджи"
 
@@ -252,38 +212,60 @@ msgstr "Зона за джаджи"
 msgid "Social Links Menu"
 msgstr "Меню с линкове към социални мрежи"
 
-#. #-#-#-#-#  twentyfifteen.pot (Twenty Fifteen 1.0)  #-#-#-#-#
+#: functions.php:85
+msgid "Primary Menu"
+msgstr "Главно меню"
+
+#: footer.php:25
+msgid "Proudly powered by %s"
+msgstr "Задвижвано с гордост от  %s"
+
+#. #-#-#-#-#  twentyfifteen.pot (Twenty Fifteen 1.7)  #-#-#-#-#
 #. Author URI of the plugin/theme
 #: footer.php:25
 msgid "https://wordpress.org/"
 msgstr "https://wordpress.org/"
 
+#: content-none.php:31
+msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
+msgstr "Страницата не съществува. Пробвайте да потърсете, това което ви трябва."
+
+#: content-none.php:26
+msgid "Sorry, but nothing matched your search terms. Please try again with some different keywords."
+msgstr "Няма резултати, отговарящи на вашето търсене. Опитайте отново с други ключови думи. "
+
+#: content-none.php:22
+msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
+msgstr "Време е за първата ви публикация. <a href=\"%1$s\">Започнете от тук</a>."
+
+#: content-none.php:15
+msgid "Nothing Found"
+msgstr "Нищо не е открито"
+
+#: content-link.php:56 content-page.php:35 content-search.php:28
+#: content-search.php:33 content.php:57 image.php:71
+msgid "Edit"
+msgstr "Редактиране"
+
+#: content-link.php:36 content-page.php:25 content.php:38 image.php:59
+msgid "Pages:"
+msgstr "Страници:"
+
+#. translators: %s: Name of current post
+#: content-link.php:31 content.php:33 inc/template-tags.php:238
+msgid "Continue reading %s"
+msgstr "Нататък %s"
+
+#: comments.php:53
+msgid "Comments are closed."
+msgstr "Коментари са забранени."
+
 #: comments.php:28
 msgctxt "comments title"
 msgid "One thought on &ldquo;%2$s&rdquo;"
 msgid_plural "%1$s thoughts on &ldquo;%2$s&rdquo;"
-msgstr[0] "Един коментар към &ldquo;%2$s&rdquo;"
-msgstr[1] "%1$s коментара към &ldquo;%2$s&rdquo;"
-
-#: functions.php:231
-msgid "expand child menu"
-msgstr "разширяване на дъщерното меню"
-
-#: functions.php:232
-msgid "collapse child menu"
-msgstr "свиване на дъщерното меню"
-
-#. translators: To add an additional character subset specific to your
-#. language, translate this to 'greek', 'cyrillic', 'devanagari' or
-#. 'vietnamese'. Do not translate into your own language.
-#: functions.php:173
-msgctxt "Add new subset (greek, cyrillic, devanagari, vietnamese)"
-msgid "no-subset"
-msgstr "cyrillic"
-
-#: 404.php:21
-msgid "It looks like nothing was found at this location. Maybe try a search?"
-msgstr "Тук няма нищо. Опитайте с търсене?"
+msgstr[0] "Едно мнение за &ldquo;%2$s&rdquo;"
+msgstr[1] "%1$s мнения за &ldquo;%2$s&rdquo;"
 
 #: author-bio.php:34
 msgid "View all posts by %s"
@@ -306,6 +288,18 @@ msgstr "Следваща страница"
 msgid "Previous page"
 msgstr "Предишна страница"
 
+#: 404.php:21
+msgid "It looks like nothing was found at this location. Maybe try a search?"
+msgstr "Нищо не бе намерено на този адрес. Защо не пробвате полето за търсене?"
+
 #: 404.php:17
 msgid "Oops! That page can&rsquo;t be found."
 msgstr "Страницата не е открита."
+
+#. Author of the plugin/theme
+msgid "the WordPress team"
+msgstr "екипа на WordPress "
+
+#. Theme URI of the plugin/theme
+msgid "https://wordpress.org/themes/twentyfifteen/"
+msgstr "https://wordpress.org/themes/twentyfifteen/"
