--- a/web/app/languages/themes/twentytwelve-bg_BG.po
+++ b/web/app/languages/themes/twentytwelve-bg_BG.po
@@ -1,94 +1,223 @@
-# Translation of Twenty Twelve in Bulgarian
-# This file is distributed under the same license as the Twenty Twelve package.
+# Translation of Themes - Twenty Twelve in Bulgarian
+# This file is distributed under the same license as the Themes - Twenty Twelve package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2013-06-11 15:39:24+0000\n"
+"PO-Revision-Date: 2016-06-03 22:54:17+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: GlotPress/0.1\n"
-"Project-Id-Version: Twenty Twelve\n"
+"X-Generator: GlotPress/2.3.0-alpha\n"
+"Language: bg\n"
+"Project-Id-Version: Themes - Twenty Twelve\n"
 
-msgid "http://wordpress.org/themes/twentytwelve"
-msgstr "http://wordpress.org/themes/twentytwelve"
-
-#: functions.php:349
-msgid "Reply"
-msgstr "Отговор"
-
-#: image.php:26
-msgid "<span class=\"meta-prep meta-prep-entry-date\">Published </span> <span class=\"entry-date\"><time class=\"entry-date\" datetime=\"%1$s\">%2$s</time></span> at <a href=\"%3$s\" title=\"Link to full-size image\">%4$s &times; %5$s</a> in <a href=\"%6$s\" title=\"Return to %7$s\" rel=\"gallery\">%8$s</a>."
-msgstr "<span class=\"meta-prep meta-prep-entry-date\">Публикувано </span> <span class=\"entry-date\"><time class=\"entry-date\" datetime=\"%1$s\">%2$s</time></span> в размер <a href=\"%3$s\" title=\"Връзка към пълния размер на изображението\">%4$s &times; %5$s</a> в <a href=\"%6$s\" title=\"Назад към %7$s\" rel=\"gallery\">%8$s</a>."
-
+#. Description of the plugin/theme
 msgid "The 2012 theme for WordPress is a fully responsive theme that looks great on any device. Features include a front page template with its own widgets, an optional display font, styling for post formats on both index and single views, and an optional no-sidebar page template. Make it yours with a custom menu, header image, and background."
 msgstr "Темата 2012 се приспособява и изглежда добре на всякакви устройства. Включени са шаблон за началната страница със собствени джаджи, избор на допълнителен шрифт, оформление на публикациите според вида им, както и шаблон без странична лента. Променете я по свой вкус със собствено меню, заглавна картинка и фон."
 
-#: functions.php:101
-msgctxt "Open Sans font: on or off"
-msgid "on"
-msgstr "on"
+#. Theme Name of the plugin/theme
+msgid "Twenty Twelve"
+msgstr "Две хиляди и дванадесет"
 
-#: functions.php:107
-msgctxt "Open Sans font: add new subset (greek, cyrillic, vietnamese)"
-msgid "no-subset"
-msgstr "cyrillic"
+#. Template Name of the plugin/theme
+msgid "Full-width Page Template, No Sidebar"
+msgstr "Шаблон с пълна ширина, без странична лента"
 
-#: functions.php:244
-msgid "Appears on posts and pages except the optional Front Page template, which has its own widgets"
-msgstr "Появява се на всички публикации и страници, освен в шаблона за начална страница, който има собствени джаджи"
+#. Template Name of the plugin/theme
+msgid "Front Page Template"
+msgstr "Шаблон за началната страница"
 
-#: functions.php:252
-msgid "First Front Page Widget Area"
-msgstr "Първа зона за джаджи на началната страница"
-
-#: functions.php:254 functions.php:264
-msgid "Appears when using the optional Front Page template with a page set as Static Front Page"
-msgstr "Появява се при прилагане на шаблона за начална страница върху страницата, зададена като статична начална страница"
-
-#: functions.php:262
-msgid "Second Front Page Widget Area"
-msgstr "Втора зона за джаджи на началната страница"
-
-#: functions.php:390
-msgid "This entry was posted in %1$s and tagged %2$s on %3$s<span class=\"by-author\"> by %4$s</span>."
-msgstr "Публикувано в %1$s и отбелязано с %2$s на %3$s<span class=\"by-author\"> от %4$s</span>."
-
-#: functions.php:392
-msgid "This entry was posted in %1$s on %3$s<span class=\"by-author\"> by %4$s</span>."
-msgstr "Публикувано в %1$s на %3$s<span class=\"by-author\"> от %4$s</span>."
-
-#: functions.php:394
-msgid "This entry was posted on %3$s<span class=\"by-author\"> by %4$s</span>."
-msgstr "Публикувано на %3$s<span class=\"by-author\"> от %4$s</span>."
-
-#: single.php:21
-msgctxt "Previous post link"
-msgid "&larr;"
-msgstr "&larr;"
+#: tag.php:21
+msgid "Tag Archives: %s"
+msgstr "Архив за етикет: %s"
 
 #: single.php:22
 msgctxt "Next post link"
 msgid "&rarr;"
 msgstr "&rarr;"
 
-msgid "Front Page Template"
-msgstr "Шаблон за началната страница"
+#: single.php:21
+msgctxt "Previous post link"
+msgid "&larr;"
+msgstr "&larr;"
 
-msgid "Full-width Page Template, No Sidebar"
-msgstr "Шаблон с пълна ширина, без странична лента"
+#: search.php:38
+msgid "Sorry, but nothing matched your search criteria. Please try again with some different keywords."
+msgstr "Нищо не отговаря на критериите ви. Моля, опитайте отново с различни ключови думи."
+
+#: search.php:18
+msgid "Search Results for: %s"
+msgstr "Резултати от търсене на: %s"
+
+#: index.php:42
+msgid "Ready to publish your first post? <a href=\"%s\">Get started here</a>."
+msgstr "Готови ли сте за първата си публикация? <a href=\"%s\">Започнете от тук</a>."
+
+#: index.php:38
+msgid "No posts to display"
+msgstr "Няма публикации"
+
+#: image.php:42
+msgid "Next &rarr;"
+msgstr "Следващ &rarr;"
+
+#: image.php:41
+msgid "&larr; Previous"
+msgstr "&larr; Предишен"
+
+#: image.php:26
+msgid "<span class=\"meta-prep meta-prep-entry-date\">Published </span> <span class=\"entry-date\"><time class=\"entry-date\" datetime=\"%1$s\">%2$s</time></span> at <a href=\"%3$s\" title=\"Link to full-size image\">%4$s &times; %5$s</a> in <a href=\"%6$s\" title=\"Return to %7$s\" rel=\"gallery\">%8$s</a>."
+msgstr "<span class=\"meta-prep meta-prep-entry-date\">Публикувано </span> <span class=\"entry-date\"><time class=\"entry-date\" datetime=\"%1$s\">%2$s</time></span> в размер <a href=\"%3$s\" title=\"Връзка към пълния размер на изображението\">%4$s &times; %5$s</a> в <a href=\"%6$s\" title=\"Назад към %7$s\" rel=\"gallery\">%8$s</a>."
+
+#: header.php:44
+msgid "Skip to content"
+msgstr "Към съдържанието"
+
+#: header.php:43
+msgid "Menu"
+msgstr "Меню"
+
+#: functions.php:419
+msgid "This entry was posted on %3$s<span class=\"by-author\"> by %4$s</span>."
+msgstr "Публикувано на %3$s<span class=\"by-author\"> от %4$s</span>."
+
+#: functions.php:417
+msgid "This entry was posted in %1$s on %3$s<span class=\"by-author\"> by %4$s</span>."
+msgstr "Публикувано в %1$s на %3$s<span class=\"by-author\"> от %4$s</span>."
+
+#. Translators: 1 is category, 2 is tag, 3 is the date and 4 is the author's
+#. name.
+#: functions.php:415
+msgid "This entry was posted in %1$s and tagged %2$s on %3$s<span class=\"by-author\"> by %4$s</span>."
+msgstr "Публикувано в %1$s и отбелязано с %2$s на %3$s<span class=\"by-author\"> от %4$s</span>."
+
+#: functions.php:409
+msgid "View all posts by %s"
+msgstr "Всички публикации от %s"
+
+#. Translators: used between list items, there is a space after the comma.
+#: functions.php:395 functions.php:398
+msgid ", "
+msgstr ", "
+
+#: functions.php:374
+msgid "Reply"
+msgstr "Отговор"
+
+#: functions.php:365
+msgid "Your comment is awaiting moderation."
+msgstr "Коментарът ви очаква одобрение."
+
+#. translators: 1: date, 2: time
+#: functions.php:359
+msgid "%1$s at %2$s"
+msgstr "%1$s в %2$s"
+
+#: functions.php:353
+msgid "Post author"
+msgstr "Автор"
+
+#: functions.php:338
+msgid "(Edit)"
+msgstr "(Редактиране)"
+
+#: functions.php:338
+msgid "Pingback:"
+msgstr "Pingback:"
+
+#: functions.php:313
+msgid "Newer posts <span class=\"meta-nav\">&rarr;</span>"
+msgstr "По-нови публикации <span class=\"meta-nav\">&rarr;</span>"
+
+#: functions.php:312
+msgid "<span class=\"meta-nav\">&larr;</span> Older posts"
+msgstr "<span class=\"meta-nav\">&larr;</span> По-стари публикации"
+
+#: functions.php:311 single.php:20
+msgid "Post navigation"
+msgstr "Навигация в публикациите"
+
+#: functions.php:289
+msgid "Second Front Page Widget Area"
+msgstr "Втора зона за джаджи на началната страница"
+
+#: functions.php:281 functions.php:291
+msgid "Appears when using the optional Front Page template with a page set as Static Front Page"
+msgstr "Появява се при прилагане на шаблона за начална страница върху страницата, зададена като статична начална страница"
+
+#: functions.php:279
+msgid "First Front Page Widget Area"
+msgstr "Първа зона за джаджи на началната страница"
+
+#: functions.php:271
+msgid "Appears on posts and pages except the optional Front Page template, which has its own widgets"
+msgstr "Появява се на всички публикации и страници, освен в шаблона за начална страница, който има собствени джаджи"
+
+#: functions.php:269
+msgid "Main Sidebar"
+msgstr "Основна странична лента"
+
+#: functions.php:240
+msgid "Page %s"
+msgstr "Страница %s"
+
+#. translators: To add an additional Open Sans character subset specific to
+#. your language, translate this to 'greek', 'cyrillic' or 'vietnamese'. Do not
+#. translate into your own language.
+#: functions.php:110
+msgctxt "Open Sans font: add new subset (greek, cyrillic, vietnamese)"
+msgid "no-subset"
+msgstr "no-subset"
+
+#. translators: If there are characters in your language that are not supported
+#. by Open Sans, translate this to 'off'. Do not translate into your own
+#. language.
+#: functions.php:104
+msgctxt "Open Sans font: on or off"
+msgid "on"
+msgstr "on"
+
+#: functions.php:64
+msgid "Primary Menu"
+msgstr "Главно меню"
+
+#: footer.php:16
+msgid "Proudly powered by %s"
+msgstr "Задвижвано с гордост от  %s"
+
+#: footer.php:16
+msgid "Semantic Personal Publishing Platform"
+msgstr "Семантична система за публикуване"
+
+#: content.php:66
+msgid "View all posts by %s <span class=\"meta-nav\">&rarr;</span>"
+msgstr "Всички публикации от %s <span class=\"meta-nav\">&rarr;</span>"
 
 #: content.php:16
 msgid "Featured post"
 msgstr "Избрана публикация"
 
-#: functions.php:213
-msgid "Page %s"
-msgstr "Страница %s"
+#: content-page.php:21 content.php:45 image.php:102
+msgid "Pages:"
+msgstr "Страници:"
+
+#: content-none.php:17 index.php:53
+msgid "Apologies, but no results were found. Perhaps searching will help find a related post."
+msgstr "Нищо не е намерено. Може би търсачката ще ви помогне да откриете подобна публикация."
+
+#: content-none.php:13 index.php:49 search.php:34
+msgid "Nothing Found"
+msgstr "Нищо не е открито"
 
 #: content-link.php:12
 msgid "Link"
 msgstr "Връзка"
+
+#: content-aside.php:26 content-image.php:26 content-link.php:24
+#: content-page.php:24 content-quote.php:23 content-status.php:40
+#: content.php:51 functions.php:370 image.php:37
+msgid "Edit"
+msgstr "Редактиране"
 
 #: content-aside.php:23 content-image.php:23 content-link.php:21
 #: content-quote.php:20 content-status.php:37 content.php:33
@@ -100,126 +229,36 @@ msgstr "% отговора"
 msgid "1 Reply"
 msgstr "1 отговор"
 
-#: 404.php:21
-msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
-msgstr "Страницата не съществува. Пробвайте да потърсете, това което ви трябва."
-
-#: content-none.php:17 index.php:53
-msgid "Apologies, but no results were found. Perhaps searching will help find a related post."
-msgstr "Няма резултати за поисканата страцани. Може би търсачката ще ви помогне да откриете подобна публикация."
-
-#: functions.php:328
-msgid "Post author"
-msgstr "Автор"
-
-#: functions.php:313
-msgid "(Edit)"
-msgstr "(Редактиране)"
-
-#: header.php:43
-msgid "Menu"
-msgstr "Меню"
-
-#: header.php:44
-msgid "Skip to content"
-msgstr "Към съдържанието"
-
-#: index.php:38
-msgid "No posts to display"
-msgstr "Няма публикации"
-
-#: index.php:42
-msgid "Ready to publish your first post? <a href=\"%s\">Get started here</a>."
-msgstr "Готови ли сте за първата си публикация? <a href=\"%s\">Започнете от тук</a>."
-
-#: functions.php:384
-msgid "View all posts by %s"
-msgstr "Всички публикации от %s"
-
-#: image.php:41
-msgid "&larr; Previous"
-msgstr "&larr; Предишен"
-
-#: image.php:42
-msgid "Next &rarr;"
-msgstr "Следващ &rarr;"
-
-#: search.php:18
-msgid "Search Results for: %s"
-msgstr "Резултати от търсене на: %s"
-
-#: search.php:38
-msgid "Sorry, but nothing matched your search criteria. Please try again with some different keywords."
-msgstr "Нищо не отговаря на критериите ви. Моля опитайте отново с различни ключови думи."
-
-#: archive.php:35
-msgid "Archives"
-msgstr "Архиви"
-
-msgid "Twenty Twelve"
-msgstr "Две хиляди и дванадесет"
-
-msgid "the WordPress team"
-msgstr "екипа на WordPress "
-
-#: functions.php:340
-msgid "Your comment is awaiting moderation."
-msgstr "Коментарът ви очаква одобрение."
-
-#: functions.php:334
-msgid "%1$s at %2$s"
-msgstr "%1$s в %2$s"
+#: content-aside.php:23 content-image.php:23 content-link.php:21
+#: content-quote.php:20 content-status.php:37 content.php:33
+msgid "Leave a reply"
+msgstr "Вашият коментар"
 
 #: content-aside.php:20 content-link.php:18 content-quote.php:17
 #: content-status.php:15
 msgid "Permalink to %s"
 msgstr "Постоянна връзка към %s"
 
-#: functions.php:242
-msgid "Main Sidebar"
-msgstr "Основна странична лента"
+#: content-aside.php:15 content-image.php:13 content-link.php:14
+#: content-quote.php:13 content-status.php:31 content.php:44
+msgid "Continue reading <span class=\"meta-nav\">&rarr;</span>"
+msgstr "Има още <span class=\"meta-nav\">&rarr;</span>"
 
-#: functions.php:286 single.php:20
-msgid "Post navigation"
-msgstr "Навигация в публикациите"
-
-#: functions.php:287
-msgid "<span class=\"meta-nav\">&larr;</span> Older posts"
-msgstr "<span class=\"meta-nav\">&larr;</span> По-стари публикации"
-
-#: functions.php:288
-msgid "Newer posts <span class=\"meta-nav\">&rarr;</span>"
-msgstr "По-нови публикации <span class=\"meta-nav\">&rarr;</span>"
-
-#: functions.php:313
-msgid "Pingback:"
-msgstr "Pingback:"
-
-#: functions.php:64
-msgid "Primary Menu"
-msgstr "Главно меню"
-
-#: footer.php:16
-msgid "Proudly powered by %s"
-msgstr "Задвижвано с гордост от  %s"
-
-#: content-aside.php:26 content-image.php:26 content-link.php:24
-#: content-page.php:24 content-quote.php:23 content-status.php:40
-#: content.php:51 functions.php:345 image.php:37
-msgid "Edit"
-msgstr "Редактиране"
+#: comments.php:53
+msgid "Comments are closed."
+msgstr "Коментарите са забранени."
 
 #: comments.php:44
 msgid "Newer Comments &rarr;"
 msgstr "По-нови коментари &rarr;"
 
-#: comments.php:53
-msgid "Comments are closed."
-msgstr "Коментарите са затворени."
+#: comments.php:43
+msgid "&larr; Older Comments"
+msgstr "&larr; По-стари коментари"
 
-#: author.php:63 content.php:62
-msgid "About %s"
-msgstr "За %s"
+#: comments.php:42
+msgid "Comment navigation"
+msgstr "Навигация в коментарите"
 
 #: comments.php:31
 msgid "One thought on &ldquo;%2$s&rdquo;"
@@ -227,82 +266,62 @@ msgid_plural "%1$s thoughts on &ldquo;%2$s&rdquo;"
 msgstr[0] "Едно мнение по &#8222;%2$s&#8220; "
 msgstr[1] "%1$s мнения по &#8222;%2$s&#8220;"
 
-#: archive.php:31
-msgctxt "monthly archives date format"
-msgid "F Y"
-msgstr "F Y"
+#: category.php:21
+msgid "Category Archives: %s"
+msgstr "Архив на категория: %s"
 
-#: archive.php:33
-msgid "Yearly Archives: %s"
-msgstr "Годишни архиви: %s"
+#: author.php:63 content.php:62
+msgid "About %s"
+msgstr "За %s"
+
+#: author.php:32
+msgid "Author Archives: %s"
+msgstr "Архив на: %s"
+
+#: archive.php:35
+msgid "Archives"
+msgstr "Архиви"
 
 #: archive.php:33
 msgctxt "yearly archives date format"
 msgid "Y"
 msgstr "Y"
 
-#: tag.php:21
-msgid "Tag Archives: %s"
-msgstr "Архив за етикет: %s"
+#: archive.php:33
+msgid "Yearly Archives: %s"
+msgstr "Годишни архиви: %s"
 
-#: category.php:21
-msgid "Category Archives: %s"
-msgstr "Архив на категория: %s"
-
-#: archive.php:29
-msgid "Daily Archives: %s"
-msgstr "Дневни архиви: %s"
+#: archive.php:31
+msgctxt "monthly archives date format"
+msgid "F Y"
+msgstr "F Y"
 
 #: archive.php:31
 msgid "Monthly Archives: %s"
 msgstr "Месечни архиви: %s"
 
-#: content-aside.php:15 content-image.php:13 content-link.php:14
-#: content-quote.php:13 content-status.php:31 content.php:44
-msgid "Continue reading <span class=\"meta-nav\">&rarr;</span>"
-msgstr "Има още <span class=\"meta-nav\">&rarr;</span>"
+#: archive.php:29
+msgid "Daily Archives: %s"
+msgstr "Дневни архиви: %s"
 
-#: content-aside.php:23 content-image.php:23 content-link.php:21
-#: content-quote.php:20 content-status.php:37 content.php:33
-msgid "Leave a reply"
-msgstr "Вашият отговор"
-
-#: footer.php:16
-msgid "http://wordpress.org/"
-msgstr "http://bg.wordpress.org/"
-
-#: footer.php:16
-msgid "Semantic Personal Publishing Platform"
-msgstr "Семантична система за публикуване"
-
-#: content-none.php:13 index.php:49 search.php:34
-msgid "Nothing Found"
-msgstr "Нищо не е открито"
-
-#: author.php:32
-msgid "Author Archives: %s"
-msgstr "Архив на: %s"
-
-#: comments.php:42
-msgid "Comment navigation"
-msgstr "Навигация в коментарите"
-
-#: comments.php:43
-msgid "&larr; Older Comments"
-msgstr "&larr; По-стари коментари"
-
-#: functions.php:370 functions.php:373
-msgid ", "
-msgstr ", "
-
-#: content-page.php:21 content.php:45 image.php:102
-msgid "Pages:"
-msgstr "Страници:"
-
-#: content.php:66
-msgid "View all posts by %s <span class=\"meta-nav\">&rarr;</span>"
-msgstr "Всички публикации от %s <span class=\"meta-nav\">&rarr;</span>"
+#: 404.php:21
+msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
+msgstr "Страницата не съществува. Пробвайте да потърсете, това което ви трябва."
 
 #: 404.php:17
 msgid "This is somewhat embarrassing, isn&rsquo;t it?"
-msgstr "Грешка 404"
+msgstr "Това не е ли досадно, наистина?"
+
+#. #-#-#-#-#  twentytwelve.pot (Twenty Twelve 2.2)  #-#-#-#-#
+#. Author URI of the plugin/theme
+#: footer.php:16
+msgid "https://wordpress.org/"
+msgstr "https://wordpress.org/"
+
+#. Author of the plugin/theme
+msgid "the WordPress team"
+msgstr "екипа на WordPress "
+
+#. Theme URI of the plugin/theme
+msgid "https://wordpress.org/themes/twentytwelve/"
+msgstr "https://wordpress.org/themes/twentytwelve/"
